# Bridge

./: .gitignore  CMakeLists.txt  Contract.hpp  Deal.hpp  Deck.hpp  Hand.hpp  Holding.hpp  Makefile  README.md  Result.hpp  constants.hpp  enum.hpp  generate.cpp
include/: Contract.hpp  Deal.hpp  Hand.hpp  Result.hpp
include/Bridge/: Binary.hpp  Bitset.hpp  Contract.hpp  DDS.hpp  Deal.hpp  Evaluator.hpp  Hand.hpp  Holding.hpp  Mask.hpp  Result.hpp  enum.hpp
lib/: CMakeLists.txt  DDS.cpp  Deal.cpp
src/: generate.cpp
tools/: CMakeLists.txt  check-nltc.cpp  generate.cpp
